<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rodrigo.ligue4.Activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_mode_game" />

        <RadioGroup
            android:id="@+id/rg_game_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_vs_machine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_vs_machine"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rb_vs_friend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_vs_friend" />
        </RadioGroup>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="playLigue4"
            android:text="@string/lbl_play" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
